Fix poms and update ASM